# radicle-http-api

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.concourse/: config.yaml  secrets.yaml
.github/workflows/: check-http-server.yml  check-radicle-http-api.yml
radicle-http-api/: Cargo.toml  LICENSE-MIT  radicle-http-api.1.adoc
radicle-http-api/src/: api.rs  lib.rs  main.rs
radicle-http-api/src/api/: v1.rs
radicle-http-api/src/api/v1/: oauth.rs
radicle-httpd/: Cargo.toml
radicle-httpd/src/: api.rs  lib.rs  main.rs  test.rs
radicle-httpd/src/api/: error.rs  json.rs
radicle-httpd/src/api/v1/: projects.rs  sessions.rs
src/: api.rs  lib.rs  main.rs  store.rs  test.rs
src/api/: auth.rs  error.rs  json.rs  v1.rs
src/api/v1/: oauth.rs  projects.rs  sessions.rs  webhooks.rs
src/store/: webhooks_schema.sql
systemd/: radicle-http-api.service
