[package]
name = "radicle-http-api"
description = "Radicle HTTP API"
homepage = "https://radicle.xyz"
license = "MIT OR Apache-2.0"
version = "1.1.0"
authors = ["cloudhead <cloudhead@radicle.xyz>", "jchrist <jchrist@cytech.gr>"]
edition = "2021"
default-run = "radicle-http-api"
build = "build.rs"

[features]
default = []
logfmt = [
  "tracing-logfmt",
  "tracing-subscriber/env-filter"
]

[[bin]]
name = "radicle-http-api"
path = "src/main.rs"

[dependencies]
anyhow = { version = "^1.0.89" }
axum = { version = "^0.7.7", default-features = false, features = ["json", "query", "form", "tokio", "http1"] }
axum-auth = { version= "0.7.0", default-features = false, features = ["auth-bearer"] }
axum-server = { version = "^0.7.1", default-features = false }
base64 = { version = "^0.22.1" }
chrono = { version = "^0.4.38", default-features = false, features = ["clock"] }
fastrand = { version = "^2.1.1" }
flate2 = { version = "^1.0.34" }
hyper = { version = "^1.5.0", default-features = false }
lexopt = { version = "^0.3.0" }
lru = { version = "^0.12.5" }
nonempty = { version = "^0.9.0", features = ["serialize"] } # must match the one in radicle
radicle-surf = { version = "^0.22.1", default-features = false, features = ["serde"] }
radicle-term = { version = "^0.11.0", default-features = false }
serde = { version = "^1.0.210", features = ["derive"] }
serde_json = { version = "^1.0.128", features = ["preserve_order"] }
sqlite = { version = "^0.32.0", features = ["bundled"] } # must match the one in radicle
thiserror = { version = "^1.0.64" }
time = { version = "^0.3.36", features = ["parsing", "serde"] }
tokio = { version = "^1.40.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tower-http = { version = "^0.6.1", default-features = false, features = ["trace", "cors", "set-header"] }
tracing = { version = "^0.1.40", default-features = false, features = ["std", "log"] }
tracing-logfmt = { version = "^0.3.5", optional = true }
tracing-subscriber = { version = "^0.3.18", default-features = false, features = ["std", "ansi", "fmt"] }
ureq = { version = "^2.10.1", default-features = false, features = ["json"] }
url = { version = "^2.5.2" }

[dependencies.radicle]
version = "0.13.0"

[dev-dependencies]
hyper = { version = "^1.5.0", default-features = false, features = ["client"] }
pretty_assertions = { version = "^1.4.1" }
radicle-crypto = { version = "^0.11.0", features = ["test"] }
tempfile = { version = "^3.13.0" }
tower = { version = "^0.5.1", features = ["util"] }
